# rabboni_direction_detect_ai

./: PKG-INFO  README.md  accZ_model_lstm.tflite  get_data_from_rawdata.py  predict.py  pyproject.toml  record.py  setup.py  to_array.py
accZ_model_lstm/: fingerprint.pb  keras_metadata.pb  saved_model.pb
accZ_model_lstm/variables/: variables.data-00000-of-00001  variables.index
example/: rab_demo.py  rab_example.py  rabboni_connect.py  rabboni_get_battery.py  rabboni_read_config.py  rabboni_reset_count.py  rabboni_set_config.py
src/: ai_model.py  demo.py  demo_continuous.py  lite_converter.py  lstm_model.py  lstm_model2.py  model_testing.py  rab_demo.py  rab_example.py  test.py
src/accZ_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/accZ_model/variables/: variables.data-00000-of-00001  variables.index
src/lstm_model_2/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/lstm_model_2.1/: fingerprint.pb  keras_metadata.pb
src/lstm_model_2.1/variables/: variables.data-00000-of-00001  variables.index
src/lstm_model_2/variables/: variables.data-00000-of-00001  variables.index
src/rabboni_multi_python_sdk/: __init__.py  constants.py
src/rawdata/left/: 資料說明.docx
src/rawdata/motionless/: 資料說明.docx
src/test_data/left/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
src/test_data/motionless/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
src/test_data/right/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
test/: test_rabboni_connect.py
train/down/accX/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  (+250 more)
(+2096 files in other folders)
