[project]
name = "rabboni-multi-python-sdk"
version = "1.1.0"
description = "Rabboni Python SDK"
authors = [
    { name = "Bobson Lin", email = "bobson801104@gmail.com" },
]
dependencies = [
    "bleak==0.20.2",
    "Rabboni==1.83",
]
requires-python = ">=3.7"
readme = "README.md"

[project.license]
text = "MIT"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.build]
includes = [
    "setup.py",
    "src/rabboni_multi_python_sdk",
    "example",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.1",
]
